# modeling-of-the-beam-position-detection-system

./: CMakeLists.txt  init_vis.mac  runTest.mac  simulation.cc  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  ParticleGenerator.hh  PhotomultiplierSD.hh  PhysicsList.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
sources/: ActionInitialization.cc  DetectorConstruction.cc  ParticleGenerator.cc  PhotomultiplierSD.cc  PhysicsList.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
